# 1000000

./: .gitignore  App.tsx  README.md  docker-compose.yml  index.html  index.tsx  metadata.json  package-lock.json  package.json  tsconfig.json  types.ts
backend/: .env  .env.example  deploy.sh  package-lock.json  package.json  schema.sql  seed.sql  server.js
backend/prisma/: schema.prisma  seed.ts
backend/src/: index.ts  schemas.ts  socket.ts
backend_python/: main.py  requirements.txt
backend_rust/: Cargo.toml
backend_rust/src/: main.rs
components/: AIChatWidget.tsx  AutoInsuranceRecommenderModal.tsx  BusinessInsuranceRecommenderModal.tsx  CRMData.tsx  ErrorBoundary.tsx  Footer.tsx  LifeInsuranceRecommenderModal.tsx  MortgageRecommenderModal.tsx  Navbar.tsx  PropertyDetailModal.tsx  RealEstateRecommenderModal.tsx  SecuritiesRecommenderModal.tsx  SpeakToAdvisorForm.tsx  TestimonialsSection.tsx
components/chat/: ChatInput.tsx  ChatSidebar.tsx  ChatWindow.tsx  FilePreview.tsx  MessageBubble.tsx
context/: DataContext.tsx
hooks/: useSocket.ts
pages/: Login.tsx
pages/admin/: AdminUsers.tsx  EmailSignature.tsx  MarketingIntegrations.tsx  ProductCms.tsx  RealEstateAdmin.tsx  RealEstateCms.tsx  WebsiteSettings.tsx
pages/crm/: AdvisorOnboardingFlow.tsx  AutomationStudio.tsx  Calendar.tsx  Clients.tsx  Commissions.tsx  Dashboard.tsx  IntegrationsHub.tsx  Leads.tsx  LegalCompliance.tsx  ProfileSettings.tsx
pages/website/: About.tsx  AdvisorMicrosite.tsx  Home.tsx  (+13 more)
services/: apiBackend.ts  database.ts  geminiService.ts  marketingBackend.ts  socketService.ts
(+18 files in other folders)
