
[package]
name = "nhfg_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json"] }
dotenv = "0.15.0"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
chrono = { version = "0.4.33", features = ["serde"] }
tower-http = { version = "0.5.1", features = ["cors"] }
jsonwebtoken = "9.2.0"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
headers = "0.4.0"
